k8s/jenkinsservice/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: ClusterIP
  selector:
    app: jenkins-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-service
  template:
    metadata:
      labels:
        app: jenkins-service
        com.msinit.log: "true"
        com.msinit.service-name: jenkinsservice
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: jenkins-service
          image: __SERVICE_IMAGE__
          ports:
            - containerPort: 8080
            - containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home
